--- a/styles/sass/abstracts/_variables.sass
+++ b/styles/sass/abstracts/_variables.sass
@@ -34,7 +34,9 @@ $background:        #F7F7FC
 $text:              #1D304C
 $secondaryText:     #8392AA
 $tertiaryText:      #A2ADBE
-$lightBlueGray:     #CCD6E5 
+$lightBlueGray:     #CCD6E5
+$btnBlue:           #007BFF
+$btnGreen:          #28A745
      
 // ===== Theme colors =====
 $light-theme: ('background':$green, 'forground':$black) 
