--- a/styles/sass/components/_buttons.sass
+++ b/styles/sass/components/_buttons.sass
@@ -6,8 +6,18 @@
     display: flex
     background-color: var.$white
     color: #444
+    font-family: var.$robo
+    padding: 8px 48px
+    cursor: pointer
     justify-content: center
     align-items: center
-    padding: 20px 50px
+    // padding: 20px 50px
     border: 1px solid var.$lightBlueGray
     border-radius: 3px
+    margin-bottom: 12px
+
+%btn-ln
+    padding: 10px
+    border: none
+    border-radius: 2px
+    font-weight: 600
