Optimizing parts of the project structurally. And add & design profile page

--- a/styles/sass/pages/_account.sass
+++ b/styles/sass/pages/_account.sass
@@ -29,50 +29,7 @@ main#main-account
         // background-color: var.$white
         padding: 12px
 
-    .form
-        padding: 12px
-        background-color: var.$white
-
-        form
-            display: flex
-            flex-direction: column
-
-        label
-            font-size: 12px
-            font-weight: 500
-            margin-bottom: 5px
-
-        input
-            margin-bottom: 10px
-            background-color: rgba(var.$lightBlueGray, .2)
-            border: 0
-            padding: 12px
-            border-radius: 3px
-
-        .btn-google
-            @extend %btn-google
-        
-        .btn-login
-            @extend %btn-ln
-            margin-top: 8px
-            background-color: var.$btnGreen
-            color: var.$white
-
-        .btn-new
-            margin-top: 8px
-            @extend %btn-ln
-            background-color: var.$btnBlue
-            color: var.$white
-        
-        .match
-            width: 100%
-            @extend %match
-
-            a
-                font-size: 11px
-                padding: auto
-                    top: 12px
-                color: var.$secondaryText
+        @import '../components/forms'
 
     // @include mix.min(700px)
     //     max-width: 400px
