--- a/styles/sass/layout/_header.sass
+++ b/styles/sass/layout/_header.sass
@@ -41,6 +41,19 @@ header#header
             font-size: 15px
             padding: 12px
 
+    #nav-user
+        display: flex
+        align-items: center
+
+        a
+            padding: auto
+                left: 8px
+            font-size: 13px
+            color: var.$secondaryText
+        
+        img
+            width: 38px
+
     @include mix.min(md)
         padding: 12px 36px
         #nav-mobile
