--- a/styles/sass/components/_buttons.sass
+++ b/styles/sass/components/_buttons.sass
@@ -16,7 +16,7 @@
     border-radius: 3px
     margin-bottom: 12px
 
-%btn-ln
+%btn-pattern
     padding: 10px
     border: none
     border-radius: 2px
