--- a/styles/sass/components/_forms.sass
+++ b/styles/sass/components/_forms.sass
@@ -51,7 +51,7 @@
 
 form#contact-items
     width: 100%
-    max-width: 600px
+    max-width: 500px
     height: 55px
     display: flex
     justify-content: center
@@ -98,3 +98,8 @@ form#contact-items
         color: var.$white
         font-weight: 600
         cursor: pointer
+
+#social-items
+    .search
+        input
+            margin-bottom: 0 !important
