--- a/styles/sass/layout/_header.sass
+++ b/styles/sass/layout/_header.sass
@@ -55,7 +55,7 @@ header#header
             width: 38px
 
     @include mix.min(md)
-        padding: 12px 36px
+        padding: 12px
         #nav-mobile
             display: none
             
