--- a/styles/sass/core/_reset.sass
+++ b/styles/sass/core/_reset.sass
@@ -9,6 +9,29 @@
 *:focus
   outline: none
 
+/* width */
+::-webkit-scrollbar 
+  width: 8px
+
+
+/* Track */
+::-webkit-scrollbar-track 
+  background-color: var.$lightBlueGray
+  // border-radius: 10px
+
+ 
+/* Handle */
+::-webkit-scrollbar-thumb 
+  background-color: var.$tertiaryText
+  
+  // border-radius: 10px
+
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover 
+  background: var.$secondaryText
+
+
 body
   transition: all .2s ease-in-out
   
