--- a/styles/sass/layout/_footer.sass
+++ b/styles/sass/layout/_footer.sass
@@ -21,7 +21,7 @@ footer#footer
             font-weight: 600
     
     @include mix.min(md)
-        padding: 0 36px
+        padding: 12px
         justify-content: space-between
         align-items: center
         
